# roastmate

./: .dockerignore  .gitignore  Dockerfile  README.md  heroku.yml  local.sh  pyproject.toml  release.sh
infra/: main.tf
migrations/: env.py
migrations/versions/: 76481030e321_create_dm_message_table.py  eb82aaa946fb_create_group_and_group_messages_tables.py
roastmate/: command_parser.py  constants.py  db_client.py  llm_client.py  main.py  prompts.py  sendblue_client.py  server.py  strings.py  types.py
scripts/: example_text.py  send_vcard.py
tests/: test_command_parser.py  test_db_client.py  test_llm_client.py
unit_tests/: test_prompts.py
