[tool.poetry]
name = "roastmate"
version = "0.1.0"
description = ""
authors = ["Sherif Nada <snadalive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^23.6.0"
alembic = "^1.11.3"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
