[tool.poetry]
name = "roastmate"
version = "0.1.0"
description = ""
authors = ["Sherif Nada <snadalive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^23.6.0"
alembic = "^1.11.3"
psycopg2 = "^2.9.7"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.20"}
asyncpg = "^0.28.0"
aiohttp = "^3.8.5"
jinja2 = "^3.1.2"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core==1.5.1"]
build-backend = "poetry.core.masonry.api"
